[package]
name = "movie_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_21"] }
rustls = "0.21"
rustls-pemfile = "1"
actix-cors = "0.6"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rusty-api = "0.1.8"
